<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/headerProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_top_area"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/userPhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_person_24"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint=" @UserName" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/headerProfile"
        app:layout_constraintBottom_toTopOf="@+id/ProfileBottomNav"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintVertical_bias="0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileContent"
        tools:ignore="MissingConstraints"
        android:background="@color/white"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserEmail"
            android:drawableStart="@drawable/baseline_mail_24"
            android:layout_margin="10dp"
            android:text="@string/hint_mail"
            android:textColor="@color/light_gray"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserPhoneNumber"
            android:drawableStart="@drawable/baseline_phone_24"
            android:layout_margin="10dp"
            android:drawablePadding="20dp"
            android:text="@string/hint_phonenumber"
            android:textColor="@color/light_gray"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserLocation"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:layout_margin="10dp"
            android:drawablePadding="20dp"
            android:text="@string/hint_location"
            android:textColor="@color/light_gray"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupEditAccount"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserAccount"
                android:drawableStart="@drawable/baseline_person_outline_24"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/hint_edit_profile"
                android:drawablePadding="20dp"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:id="@+id/btnEditAccount"
                android:layout_marginTop="-5dp"
                android:stateListAnimator="@animator/button_animation"
                app:layout_constraintRight_toRightOf="parent"
                android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupPayment"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserPayment"
                android:drawableStart="@drawable/baseline_payments_24"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/hint_payment"
                android:drawablePadding="20dp"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:id="@+id/btnPayment"
                android:layout_marginTop="-5dp"
                android:stateListAnimator="@animator/button_animation"
                app:layout_constraintRight_toRightOf="parent"
                android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupManagePassword"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserPass"
                android:drawableStart="@drawable/baseline_key_24"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/hint_password"
                android:drawablePadding="20dp"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:id="@+id/btnPassword"
                android:layout_marginTop="-5dp"
                android:stateListAnimator="@animator/button_animation"
                app:layout_constraintRight_toRightOf="parent"
                android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupYourOrder"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUserOrder"
                android:drawableStart="@drawable/baseline_text_snippet_24"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/hint_order"
                android:drawablePadding="20dp"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:id="@+id/btnOrder"
                android:layout_marginTop="-5dp"
                android:stateListAnimator="@animator/button_animation"
                app:layout_constraintRight_toRightOf="parent"
                android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groupPolicy"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPolicy"
                android:drawableStart="@drawable/baseline_local_police_24"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/hint_policy"
                android:drawablePadding="20dp"
                android:textColor="@color/light_gray"
                android:gravity="center_vertical"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:id="@+id/btnPolicy"
                android:layout_marginTop="-5dp"
                android:stateListAnimator="@animator/button_animation"
                app:layout_constraintRight_toRightOf="parent"
                android:drawableStart="@drawable/baseline_arrow_forward_ios_24"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            app:dividerColor="@color/light_gray"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/btnLogout"
            android:background="@drawable/botron_button"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/profileContent"
            android:stateListAnimator="@animator/button_animation"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="60dp"/>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>



<!--Avatar set up:  https://proandroiddev.com/avatarview-for-android-take-your-profile-images-to-the-next-level-2c0c6e06911c -->